2008-02-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-windowStyleForGSStyle:): Rewrite to
	handle all combination of styles.

2008-02-14 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/win32/WIN32Server.h,
	* Source/win32/WIN32Server.m,
	* Source/win32/w32_activate.m,
	* Source/win32/w32_movesize.m,
	* Source/win32/w32_create.m,
	* Source/win32/w32_general.m,
	* Source/win32/w32_text_focus.m,
	* Source/win32/w32_windowdisplay.m:
	General cleanup and reformatting.
	* Source/win32/w32_Events.h: Removed this file.
	
2008-02-14 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/win32/WIN32Server.h: Extend WIN_INTERN with
	backingStoreEmpty flag.
	* Source/win32/WIN32Server.m (-windowbacking::): Set
	backingStoreEmpty to YES;
	* Source/win32/w32_windowdisplay.m: Use backingStoreEmpty to
	determine drawing method.
	Patch by Christopher Armstrong <carmstrong@fastmail.com.au>.
	
2008-02-14 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/win32pbs.m (-receivedEvent:...forMode:): Don't call NSApp
	to terminate the program.

2008-02-08 Fred Kiefer <FredKiefer@gmx.de>

        * Source/art/ARTContext.m (-GSDrawImage:): Hack to allow the
	handling of pre-multiplied bitmaps.

2008-01-31 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/win32pbs.m: Use event polling code from WIN32Server.m.

2008-01-31 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m: Improve support for RTF and add TIFF support.

2008-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m: Add support for variable available clipboard
	types and minimal support for RTF.

2008-01-26 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m: Add secondary selection support. Define some more
	MIME types and add support for more standard targets. 

2008-01-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m (-setupAttributes): Use
	FC_PIXEL_SIZE instead of FC_SIZE. Fixes #21912.

2008-01-21 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGOpenGL.h,
	* Source/x11/XGGLContext.m,
	* Source/x11/XGGLFormat.m: 