@@ -1,3 +1,9 @@
+2008-02-25 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/x11/XGServer.m (-_screenContextForScreen:): Remove wrong
+	local variable declaration and reorder code.
+	* Source/x11/XGServer.m (-_initXContext:): Don't create default screen.
+
 2008-02-15 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/win32/WIN32Server.m (-windowStyleForGSStyle:): Rewrite to
